# 42-school

libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strchr.c  ft_strdup.c  ft_strlcpy.c  ft_strrchr.c  libft.h
milestone0/libft/: Makefile  ft_bzero.c  ft_isalpha.c  ft_isdigit.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstlast.c  ft_memcmp.c  ft_memmove.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strmapi.c  ft_strtrim.c  ft_tolower.c
milestone1/ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_utils.c  ft_utils2.c
milestone1/ft_printf/libft/: README.md  ft_atoi.c  ft_isalnum.c  ft_lstdelone.c  ft_lstnew.c  ft_memchr.c  ft_memcpy.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strlen.c  ft_strrchr.c  libft.h
milestone1/get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
milestone2/Push_swap/: Makefile  README.md  execute.c  initialize_utils.c  push.c  push_free.c  push_swap  push_swap.c  push_swap.h  reverse_rotate.c  rotate.c  sort.c  swap.c
milestone2/Push_swap/libft/: Makefile  ft_bzero.c  ft_calloc.c  ft_itoa.c  ft_lstiter.c  ft_lstmap.c  ft_lstsize.c  ft_printf.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c  (+4 more)
milestone2/python_modules/python08/ex1/: loading.py  pyproject.toml  requirements.txt
(+58 files in other folders)
