[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
matplotlib = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"